Upgrade to JDK 17