@@ -268,7 +268,7 @@ bootJar {
 
 jib {
     from {
-        image = 'azul/zulu-openjdk-alpine:11'
+        image = 'azul/zulu-openjdk-alpine:17'
     }
 
     to {
@@ -289,7 +289,15 @@ jib {
             '-XX:+UseContainerSupport',
             '-XX:+UseStringDeduplication',
             '-XX:MinRAMPercentage=25',
-            '-XX:MaxRAMPercentage=80'
+            '-XX:MaxRAMPercentage=80',
+            '--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/java.security=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED',
+            '--add-opens=java.management/javax.management=ALL-UNNAMED',
+            '--add-opens=java.naming/javax.naming=ALL-UNNAMED'
         ]
         args = [
             '-Duser.home=/tmp',
